--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "name": "evsx-hook-form",
   "version": "0.1.4",
+  "_location": "/evsx-hook-form",
+  "_inBundle": false,
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "evsx-hook-form",
+    "name": "evsx-hook-form",
+    "escapedName": "evsx-hook-form",
+    "rawSpec": "",
+    "saveSpec": null,
+    "fetchSpec": "latest"
+  },
   "private": false,
+  "main": "index.ts",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
