--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evsx-hook-form",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "",
   "main": "lib/index.js",
   "types": "lib",
@@ -12,13 +12,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.1.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "eslint-plugin-react": "^7.21.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tslint-react-hooks": "^2.2.2",
+    "typescript": "^4.1.2"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17"
+  },
+  "dependencies": {
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
