--- a/package.json
+++ b/package.json
@@ -6,12 +6,25 @@
   "types": "lib",
   "scripts": {
     "build": "tsc -p .",
-    "test": "echo \"Error: no test specified\""
+    "test": "jest tests",
+    "test:watch": "jest tests --watch",
+    "test:coverage": "jest tests --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-flow": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.0.1",
+    "babel-loader": "^8.1.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "eslint-plugin-react": "^7.21.5",
@@ -24,6 +37,25 @@
     "react": "^16.8.0 || ^17"
   },
   "dependencies": {
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3"
+  },
+  "jest": {
+    "verbose": true,
+    "clearMocks": true,
+    "collectCoverage": true,
+    "setupFilesAfterEnv": [
+      "./config/setupTest.js"
+    ],
+    "snapshotSerializers": [
+      "./node_modules/enzyme-to-json/serializer"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
