--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "eslint-plugin-react": "^7.21.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -42,7 +42,8 @@
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "lodash": "^4.17.20"
   },
   "jest": {
     "verbose": true,
