--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
   },
   "dependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
+    "babel-polyfill": "^6.26.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "yup": "^0.32.8"
   },
   "jest": {
     "verbose": true,
